Alura-Matematica2-Aula2

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
+    <img src="alura.png" alt="logo">
     <ul>
-            <header>    <h1>Aqui para colocar imagem</h1>
-        <li>Colégio</li>
-        <li>Aluno</li>
-    </header>
-</ul>
+    <li>Colégio</li>
+    <li>Aluno(a)</li>
+    </ul>
+</header>
 </body>
 </html>
