--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-    <img src="alura.png" alt="logo">
-    <ul>
-        <li>Colégio</li>
-        <li>Aluno(a)</li>
-    </ul>
-</header>
+     <header class="cabecalho">
+        <img class="cabecalho-imagem" src="alurastart.png" alt="Logo: Alura Start">
+<ul class="cabecalho-lista">
+<li class="cabecalho-lista-item">Colégio</li>
+<li class="cabecalho-lista-item">Aluno</li>
+</ul>
+    </header>
 </body>
 </html>
