--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
      <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart.png" alt="Logo: Alura Start">
+        <img class="cabecalho-imagem" src="alurastart.png" alt="Logo Alura Start">
 <ul class="cabecalho-lista">
 <li class="cabecalho-lista-item">Colégio</li>
 <li class="cabecalho-lista-item">Aluno</li>
 </ul>
     </header>
+    <Section class="escola">
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="texto-um">A escla Alura foi fundada em 2010 com o objetivo de esinar Pensamento Computacional através de Computação</p>
+            <p class="texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega exelentes resultados!</p>
+        </div>
+   <img class="escola-imagem" src="Classroom-amico.png" alt="Professor em pé em uma sala olhando um livro">
+    </Section>
 </body>
 </html>
