--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
      <header class="cabecalho">
@@ -22,6 +25,16 @@
             <p class="texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega exelentes resultados!</p>
         </div>
    <img class="escola-imagem" src="Classroom-amico.png" alt="Professor em pé em uma sala olhando um livro">
+    </Section>
+    <Section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <img class="estudante-icone" src="github.png" alt="Ícone do github">
+            <img class="estudante-icone" src="instagram.png" alt="Ícone do instagram">
+            <img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin">
+        </div>
     </Section>
 </body>
 </html>
