--- a/index.html
+++ b/index.html
@@ -28,13 +28,56 @@
     </Section>
     <Section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+    <div class="estudante-todos">
+        <span></span>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
             <h3 class="estudante-nome">Marcelo</h3>
-            <img class="estudante-icone" src="github.png" alt="Ícone do github">
-            <img class="estudante-icone" src="instagram.png" alt="Ícone do instagram">
-            <img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin">
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="Ícone do github"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="Ícone do instagram"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a>
         </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="Ícone do github"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="Ícone do instagram"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="Ícone do github"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="Ícone do instagram"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a>
+        </div>
+        <span></span>
+        <span></span>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="Ícone do github"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="Ícone do instagram"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="Ícone do github"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="Ícone do instagram"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a>
+        </div>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="Marcelo 1.png" alt="Foto do Marcelo">
+            <h3 class="estudante-nome">Marcelo</h3>
+            <a href="https://github.com/marcelopaludetto"><img class="estudante-icone" src="github.png" alt="Ícone do github"></a>
+            <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="Ícone do instagram"></a>
+            <a href="https://linkedin.com/marcelopaludetto"><img class="estudante-icone" src="linkedin.png" alt="Ícone do linkedin"></a>
+        </div>
+    </div>
     </Section>
+    <footer class="rodape">
+        <img class="rodape-imagem" src="alurastart.png" alt="Logo Alura Start">
+    </footer>
 </body>
 </html>
